<resources>
    <string name="app_name">fmd_mobile_app</string>

    <!-- Day 1: User Profile Screen -->
    <string name="profile_title">User Profile</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_bio">Tell us about yourself</string>
    <string name="btn_save">Save Profile</string>
</resources>
